# fotogenea

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  LICENSE  README.md  pyproject.toml  tox.ini
src/fotogenea/: __main__.py  app.py  fotogenea.py  imagegrid.py  utils.py
src/fotogenea/ui/: interface.ui
tests/: test_utils.py
